--- a/deno.json
+++ b/deno.json
@@ -1,10 +1,8 @@
 {
   "tasks": {
     "dev": "deno run --watch main.ts",
-    "start": "deno run main.ts"
-  },
-  "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "start": "deno run main.ts",
+    "cli": "deno run --allow-read cli.ts"
   },
   "unstable": [
     "sloppy-imports"
