--- a/deno.json
+++ b/deno.json
@@ -2,9 +2,6 @@
   "tasks": {
     "dev": "deno run --watch main.ts",
     "start": "deno run main.ts",
-    "cli": "deno run cli.ts --allow-read --allow-write"
-  },
-  "unstable": [
-    "sloppy-imports"
-  ]
+    "cli": "deno run --allow-read=. --allow-write=. cli.ts "
+  }
 }
