--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts",
-    "start": "deno run --allow-read=. --allow-write=. main.ts",
-    "cli": "deno run --allow-read=. --allow-write=. cli.ts "
+    "dev": "deno run --allow-read=. --allow-write=. ./src/dev.ts",
+    "cli": "deno run --allow-read=. --allow-write=. ./src/cli.ts",
+    "start": "deno run cli"
   }
 }
