--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,7 @@
   "tasks": {
     "dev": "deno run --allow-read=. --allow-write=. ./src/dev.ts",
     "cli": "deno run --allow-read=. --allow-write=. ./src/cli.ts",
-    "start": "deno run cli"
+    "start": "deno run cli",
+    "bench": "deno bench --allow-read --allow-write"
   }
 }
